# tgui-rs

./: Cargo.toml  README.md
examples/: hello_world.rs  input1.rs  input2.rs
examples/c8_emu/: .gitignore  Cargo.toml
examples/c8_emu/config/: config.ini
examples/c8_emu/config/shader/: triangle.frag  triangle.vert
examples/c8_emu/src/: chip8.rs  config.rs  cpu.rs  display.rs  keyboard.rs  memory.rs
examples/c8_emu/src/backend/: mod.rs
examples/c8_emu/src/backend/opengl/: mesh.rs  mod.rs  shader.rs  temp_window.rs  window.rs
examples/c8_emu/src/frontend/: c8_cli.rs  c8_tgui.rs
src/: activity.rs  connection.rs  event.rs  lib.rs  ui.rs  utils.rs
src/layouts/: frame_layout.rs  horizontal_scroll_view.rs  linear_layout.rs  mod.rs  nested_scroll_view.rs  radio_group.rs  swipe_refresh_layout.rs  tab_layout.rs
src/widgets/: button.rs  check_box.rs  compound_button.rs  edit_text.rs  image.rs  label.rs  mod.rs  progress_bar.rs  radio_button.rs  space.rs  spinner.rs  switch.rs  toggle_button.rs
tests/: button.rs  edit_text.rs  horizontal_scroll_view.rs  image.rs  label.rs  space.rs  spinner.rs  tab_layout.rs
