[package]
name = "tgui-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
nix = {version = "0.24.1", features = ["socket", "uio"]}
serde_json = "1.0"
bitflags = "1.3"
image = "0.24"
base64 = "0.13"

[lib]
name = "tgui"


